more download instructions

--- a/validation/src/01_prepare_genomes_and_tracks.ipynb
+++ b/validation/src/01_prepare_genomes_and_tracks.ipynb
@@ -5076,9 +5076,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
+   "display_name": "R_compEpi",
    "language": "R",
-   "name": "ir"
+   "name": "r_compepi"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -5086,7 +5086,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
