--- a/src/validation/02.1_insilico_digest_prepare_genomes_and_tracks.ipynb
+++ b/src/validation/02.1_insilico_digest_prepare_genomes_and_tracks.ipynb
@@ -14,10 +14,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -44,101 +40,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: GenomicRanges\n",
-      "\n",
-      "Loading required package: stats4\n",
-      "\n",
-      "Loading required package: BiocGenerics\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘BiocGenerics’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    combine, intersect, setdiff, union\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:parallel’:\n",
-      "\n",
-      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
-      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
-      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    IQR, mad, sd, var, xtabs\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
-      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
-      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
-      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
-      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
-      "    union, unique, unsplit, which, which.max, which.min\n",
-      "\n",
-      "\n",
-      "Loading required package: S4Vectors\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘S4Vectors’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:tidyr’:\n",
-      "\n",
-      "    expand\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    first, rename\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:data.table’:\n",
-      "\n",
-      "    first, second\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:base’:\n",
-      "\n",
-      "    expand.grid\n",
-      "\n",
-      "\n",
-      "Loading required package: IRanges\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘IRanges’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    collapse, desc, slice\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:data.table’:\n",
-      "\n",
-      "    shift\n",
-      "\n",
-      "\n",
-      "Loading required package: GenomeInfoDb\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(rtracklayer)"
    ]
@@ -588,6 +492,15 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_full[ucsc_db == \"canFam4\", ucsc_db:=\"canFam5\",]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -614,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,40 +549,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"Chimp\"\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in dir.create(dir_out, recursive = TRUE):\n",
-      "“'/binfl/lv71484/droman/DNAmeth500species//resources/reference_genomes/panTro6/tracks' already exists”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"panTro6\"\n",
-      "[1] \"Bonobo\"\n",
-      "[1] \"panPan2\"\n",
-      "[1] \"Shrew\"\n",
-      "[1] \"sorAra2\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for (i in c(78,79,80)){\n",
+    "for (i in 1:NROW(df_full)){\n",
     "    print(as.character(df_full[i]$ucsc_species))\n",
     "    #where to save tracks\n",
     "    dir_out <- file.path(output_dir, df_full[i]$ucsc_db,  \"tracks\")\n",
@@ -720,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,22 +617,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [],
-      "text/latex": [],
-      "text/markdown": [],
-      "text/plain": [
-       "named integer(0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#where we have nothing (need to check by hand)\n",
     "which(sapply(tracks_list, function(x) length(x)==0))"
@@ -754,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,72 +648,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'cpgIslandExt'</li><li>'refGene'</li><li>'rmsk'</li><li>'refSeqComposite'</li><li>'xenoRefGene'</li><li>'simpleRepeat'</li><li>'ucsc_db'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'cpgIslandExt'\n",
-       "\\item 'refGene'\n",
-       "\\item 'rmsk'\n",
-       "\\item 'refSeqComposite'\n",
-       "\\item 'xenoRefGene'\n",
-       "\\item 'simpleRepeat'\n",
-       "\\item 'ucsc\\_db'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'cpgIslandExt'\n",
-       "2. 'refGene'\n",
-       "3. 'rmsk'\n",
-       "4. 'refSeqComposite'\n",
-       "5. 'xenoRefGene'\n",
-       "6. 'simpleRepeat'\n",
-       "7. 'ucsc_db'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] \"cpgIslandExt\"    \"refGene\"         \"rmsk\"            \"refSeqComposite\"\n",
-       "[5] \"xenoRefGene\"     \"simpleRepeat\"    \"ucsc_db\"        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "colnames(tracks_present)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [],
-      "text/latex": [],
-      "text/markdown": [],
-      "text/plain": [
-       "character(0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##check if we have gene annotation for all\n",
     " tracks_present[is.na(refSeqComposite) & is.na(refGene) & is.na(xenoRefGene)]$ucsc_db"
@@ -848,46 +667,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.table: 0 × 7</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>cpgIslandExt</th><th scope=col>refGene</th><th scope=col>rmsk</th><th scope=col>refSeqComposite</th><th scope=col>xenoRefGene</th><th scope=col>simpleRepeat</th><th scope=col>ucsc_db</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.table: 0 × 7\n",
-       "\\begin{tabular}{lllllll}\n",
-       " cpgIslandExt & refGene & rmsk & refSeqComposite & xenoRefGene & simpleRepeat & ucsc\\_db\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
-       "\\hline\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.table: 0 × 7\n",
-       "\n",
-       "| cpgIslandExt &lt;dbl&gt; | refGene &lt;dbl&gt; | rmsk &lt;dbl&gt; | refSeqComposite &lt;dbl&gt; | xenoRefGene &lt;dbl&gt; | simpleRepeat &lt;dbl&gt; | ucsc_db &lt;chr&gt; |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "\n"
-      ],
-      "text/plain": [
-       "     cpgIslandExt refGene rmsk refSeqComposite xenoRefGene simpleRepeat ucsc_db"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## repeats\n",
     " tracks_present[(is.na(rmsk) & is.na(simpleRepeat))]"
@@ -895,74 +677,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.table: 7 × 7</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>cpgIslandExt</th><th scope=col>refGene</th><th scope=col>rmsk</th><th scope=col>refSeqComposite</th><th scope=col>xenoRefGene</th><th scope=col>simpleRepeat</th><th scope=col>ucsc_db</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>NA</td><td>gasAcu1</td></tr>\n",
-       "\t<tr><td>NA</td><td>NA</td><td> 1</td><td>NA</td><td> 1</td><td> 1</td><td>macEug2</td></tr>\n",
-       "\t<tr><td>NA</td><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>loxAfr3</td></tr>\n",
-       "\t<tr><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>NA</td><td>strPur2</td></tr>\n",
-       "\t<tr><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>NA</td><td>oryLat2</td></tr>\n",
-       "\t<tr><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td> 1</td><td> 1</td><td>braFlo1</td></tr>\n",
-       "\t<tr><td>NA</td><td>NA</td><td> 1</td><td>NA</td><td> 1</td><td> 1</td><td>macEug2</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.table: 7 × 7\n",
-       "\\begin{tabular}{lllllll}\n",
-       " cpgIslandExt & refGene & rmsk & refSeqComposite & xenoRefGene & simpleRepeat & ucsc\\_db\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
-       "\\hline\n",
-       "\t NA &  1 &  1 & NA & NA & NA & gasAcu1\\\\\n",
-       "\t NA & NA &  1 & NA &  1 &  1 & macEug2\\\\\n",
-       "\t NA & NA &  1 &  1 & NA & NA & loxAfr3\\\\\n",
-       "\t NA &  1 &  1 & NA & NA & NA & strPur2\\\\\n",
-       "\t NA &  1 &  1 & NA & NA & NA & oryLat2\\\\\n",
-       "\t NA & NA & NA & NA &  1 &  1 & braFlo1\\\\\n",
-       "\t NA & NA &  1 & NA &  1 &  1 & macEug2\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.table: 7 × 7\n",
-       "\n",
-       "| cpgIslandExt &lt;dbl&gt; | refGene &lt;dbl&gt; | rmsk &lt;dbl&gt; | refSeqComposite &lt;dbl&gt; | xenoRefGene &lt;dbl&gt; | simpleRepeat &lt;dbl&gt; | ucsc_db &lt;chr&gt; |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "| NA |  1 |  1 | NA | NA | NA | gasAcu1 |\n",
-       "| NA | NA |  1 | NA |  1 |  1 | macEug2 |\n",
-       "| NA | NA |  1 |  1 | NA | NA | loxAfr3 |\n",
-       "| NA |  1 |  1 | NA | NA | NA | strPur2 |\n",
-       "| NA |  1 |  1 | NA | NA | NA | oryLat2 |\n",
-       "| NA | NA | NA | NA |  1 |  1 | braFlo1 |\n",
-       "| NA | NA |  1 | NA |  1 |  1 | macEug2 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  cpgIslandExt refGene rmsk refSeqComposite xenoRefGene simpleRepeat ucsc_db\n",
-       "1 NA            1       1   NA              NA          NA           gasAcu1\n",
-       "2 NA           NA       1   NA               1           1           macEug2\n",
-       "3 NA           NA       1    1              NA          NA           loxAfr3\n",
-       "4 NA            1       1   NA              NA          NA           strPur2\n",
-       "5 NA            1       1   NA              NA          NA           oryLat2\n",
-       "6 NA           NA      NA   NA               1           1           braFlo1\n",
-       "7 NA           NA       1   NA               1           1           macEug2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## cpg islands\n",
     " tracks_present[is.na(cpgIslandExt)]"
@@ -970,35 +687,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "'/binfl/lv71484/droman/DNAmeth500species/results_analysis/validation/02_insilico_digest'"
-      ],
-      "text/latex": [
-       "'/binfl/lv71484/droman/DNAmeth500species/results\\_analysis/validation/02\\_insilico\\_digest'"
-      ],
-      "text/markdown": [
-       "'/binfl/lv71484/droman/DNAmeth500species/results_analysis/validation/02_insilico_digest'"
-      ],
-      "text/plain": [
-       "[1] \"/binfl/lv71484/droman/DNAmeth500species/results_analysis/validation/02_insilico_digest\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "getwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +728,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_full[ucsc_species %in% df_full$ucsc_species[duplicated(df_full$ucsc_species)],]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_full <- df_full[!ucsc_db %in% c(\"canFam3\", \"mm10\", \"petMar2\")]\n",
+    "\n",
+    "df_full <- df_full[! (ucsc_db == \"macEug2\" & class == \"Mammalia\")]\n",
+    "\n",
+    "df_full <- df_full[! (ucsc_db == \"sarHar1\" & class == \"Mammalia\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,28 +759,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "81"
-      ],
-      "text/latex": [
-       "81"
-      ],
-      "text/markdown": [
-       "81"
-      ],
-      "text/plain": [
-       "[1] 81"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "NROW(df_full)"
    ]
