optimized the insilico

--- a/src/validation/02.1_insilico_digest_prepare_genomes_and_tracks.ipynb
+++ b/src/validation/02.1_insilico_digest_prepare_genomes_and_tracks.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,9 +617,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>canFam3:</strong> 75"
+      ],
+      "text/latex": [
+       "\\textbf{canFam3:} 75"
+      ],
+      "text/markdown": [
+       "**canFam3:** 75"
+      ],
+      "text/plain": [
+       "canFam3 \n",
+       "     75 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#where we have nothing (need to check by hand)\n",
     "which(sapply(tracks_list, function(x) length(x)==0))"
@@ -627,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,18 +668,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'cpgIslandExt'</li><li>'refGene'</li><li>'rmsk'</li><li>'refSeqComposite'</li><li>'xenoRefGene'</li><li>'simpleRepeat'</li><li>'ucsc_db'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'cpgIslandExt'\n",
+       "\\item 'refGene'\n",
+       "\\item 'rmsk'\n",
+       "\\item 'refSeqComposite'\n",
+       "\\item 'xenoRefGene'\n",
+       "\\item 'simpleRepeat'\n",
+       "\\item 'ucsc\\_db'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'cpgIslandExt'\n",
+       "2. 'refGene'\n",
+       "3. 'rmsk'\n",
+       "4. 'refSeqComposite'\n",
+       "5. 'xenoRefGene'\n",
+       "6. 'simpleRepeat'\n",
+       "7. 'ucsc_db'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"cpgIslandExt\"    \"refGene\"         \"rmsk\"            \"refSeqComposite\"\n",
+       "[5] \"xenoRefGene\"     \"simpleRepeat\"    \"ucsc_db\"        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "colnames(tracks_present)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/latex": [],
+      "text/markdown": [],
+      "text/plain": [
+       "character(0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "##check if we have gene annotation for all\n",
     " tracks_present[is.na(refSeqComposite) & is.na(refGene) & is.na(xenoRefGene)]$ucsc_db"
@@ -667,9 +741,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 0 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>cpgIslandExt</th><th scope=col>refGene</th><th scope=col>rmsk</th><th scope=col>refSeqComposite</th><th scope=col>xenoRefGene</th><th scope=col>simpleRepeat</th><th scope=col>ucsc_db</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 0 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " cpgIslandExt & refGene & rmsk & refSeqComposite & xenoRefGene & simpleRepeat & ucsc\\_db\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 0 × 7\n",
+       "\n",
+       "| cpgIslandExt &lt;dbl&gt; | refGene &lt;dbl&gt; | rmsk &lt;dbl&gt; | refSeqComposite &lt;dbl&gt; | xenoRefGene &lt;dbl&gt; | simpleRepeat &lt;dbl&gt; | ucsc_db &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     cpgIslandExt refGene rmsk refSeqComposite xenoRefGene simpleRepeat ucsc_db"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "## repeats\n",
     " tracks_present[(is.na(rmsk) & is.na(simpleRepeat))]"
@@ -677,9 +788,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 7 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>cpgIslandExt</th><th scope=col>refGene</th><th scope=col>rmsk</th><th scope=col>refSeqComposite</th><th scope=col>xenoRefGene</th><th scope=col>simpleRepeat</th><th scope=col>ucsc_db</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>NA</td><td>gasAcu1</td></tr>\n",
+       "\t<tr><td>NA</td><td>NA</td><td> 1</td><td>NA</td><td> 1</td><td> 1</td><td>macEug2</td></tr>\n",
+       "\t<tr><td>NA</td><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>loxAfr3</td></tr>\n",
+       "\t<tr><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>NA</td><td>strPur2</td></tr>\n",
+       "\t<tr><td>NA</td><td> 1</td><td> 1</td><td>NA</td><td>NA</td><td>NA</td><td>oryLat2</td></tr>\n",
+       "\t<tr><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td> 1</td><td> 1</td><td>braFlo1</td></tr>\n",
+       "\t<tr><td>NA</td><td>NA</td><td> 1</td><td>NA</td><td> 1</td><td> 1</td><td>macEug2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 7 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " cpgIslandExt & refGene & rmsk & refSeqComposite & xenoRefGene & simpleRepeat & ucsc\\_db\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t NA &  1 &  1 & NA & NA & NA & gasAcu1\\\\\n",
+       "\t NA & NA &  1 & NA &  1 &  1 & macEug2\\\\\n",
+       "\t NA & NA &  1 &  1 & NA & NA & loxAfr3\\\\\n",
+       "\t NA &  1 &  1 & NA & NA & NA & strPur2\\\\\n",
+       "\t NA &  1 &  1 & NA & NA & NA & oryLat2\\\\\n",
+       "\t NA & NA & NA & NA &  1 &  1 & braFlo1\\\\\n",
+       "\t NA & NA &  1 & NA &  1 &  1 & macEug2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 7 × 7\n",
+       "\n",
+       "| cpgIslandExt &lt;dbl&gt; | refGene &lt;dbl&gt; | rmsk &lt;dbl&gt; | refSeqComposite &lt;dbl&gt; | xenoRefGene &lt;dbl&gt; | simpleRepeat &lt;dbl&gt; | ucsc_db &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| NA |  1 |  1 | NA | NA | NA | gasAcu1 |\n",
+       "| NA | NA |  1 | NA |  1 |  1 | macEug2 |\n",
+       "| NA | NA |  1 |  1 | NA | NA | loxAfr3 |\n",
+       "| NA |  1 |  1 | NA | NA | NA | strPur2 |\n",
+       "| NA |  1 |  1 | NA | NA | NA | oryLat2 |\n",
+       "| NA | NA | NA | NA |  1 |  1 | braFlo1 |\n",
+       "| NA | NA |  1 | NA |  1 |  1 | macEug2 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  cpgIslandExt refGene rmsk refSeqComposite xenoRefGene simpleRepeat ucsc_db\n",
+       "1 NA            1       1   NA              NA          NA           gasAcu1\n",
+       "2 NA           NA       1   NA               1           1           macEug2\n",
+       "3 NA           NA       1    1              NA          NA           loxAfr3\n",
+       "4 NA            1       1   NA              NA          NA           strPur2\n",
+       "5 NA            1       1   NA              NA          NA           oryLat2\n",
+       "6 NA           NA      NA   NA               1           1           braFlo1\n",
+       "7 NA           NA       1   NA               1           1           macEug2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "## cpg islands\n",
     " tracks_present[is.na(cpgIslandExt)]"
@@ -687,16 +863,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'/binfl/lv71484/droman/DNAmeth500species/results_analysis/validation/02_insilico_digest'"
+      ],
+      "text/latex": [
+       "'/binfl/lv71484/droman/DNAmeth500species/results\\_analysis/validation/02\\_insilico\\_digest'"
+      ],
+      "text/markdown": [
+       "'/binfl/lv71484/droman/DNAmeth500species/results_analysis/validation/02_insilico_digest'"
+      ],
+      "text/plain": [
+       "[1] \"/binfl/lv71484/droman/DNAmeth500species/results_analysis/validation/02_insilico_digest\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "getwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
