--- a/src/validation/02.1_insilico_digest_prepare_genomes_and_tracks.ipynb
+++ b/src/validation/02.1_insilico_digest_prepare_genomes_and_tracks.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Insilico digest preparation\n",
-    "Download of the reference data from the UCSC and setting up a BSgenome package for each species for the analysis of the insilico RRBS  \n",
+    "Download of the reference data from the UCSC\n",
     "Author: Daria Romanovskaia dromanovskaia@cemm.at  \n",
     "Date: 22.12.2020 (upd. 1.02.2021, upd 18.10.2021)"
    ]
@@ -960,6 +960,13 @@
    "source": [
     "NROW(df_full)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
